--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -96,6 +96,7 @@
         <binding name="ManageItemServiceSoap" />
         <binding name="OnHoldServiceSoap" />
         <binding name="ProductOrderServiceSoap" />
+        <binding name="ManageClientServiceSoap" />
       </basicHttpBinding>
       <customBinding>
         <binding name="OrderDeliveryServiceSoap12">
@@ -131,6 +132,10 @@
           <httpTransport />
         </binding>
         <binding name="ProductOrderServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+        <binding name="ManageClientServiceSoap12">
           <textMessageEncoding messageVersion="Soap12" />
           <httpTransport />
         </binding>
@@ -192,61 +197,71 @@
         binding="customBinding" bindingConfiguration="ProductOrderServiceSoap12"
         contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap12" />
     </client>-->
-       <client>
+    <client>
       <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OrderDeliveryService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="OrderDeliveryServiceSoap"
-        contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap" />
+           binding="basicHttpBinding" bindingConfiguration="OrderDeliveryServiceSoap"
+           contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap" />
       <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OrderDeliveryService.asmx"
-        binding="customBinding" bindingConfiguration="OrderDeliveryServiceSoap12"
-        contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap12" />
+           binding="customBinding" bindingConfiguration="OrderDeliveryServiceSoap12"
+           contract="DeliveryService.OrderDeliveryServiceSoap" name="OrderDeliveryServiceSoap12" />
       <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/DispatchingDeliveryService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="DispatchingDeliveryServiceSoap"
-        contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap" />
+           binding="basicHttpBinding" bindingConfiguration="DispatchingDeliveryServiceSoap"
+           contract="DispatchService.DispatchingDeliveryServiceSoap"
+           name="DispatchingDeliveryServiceSoap" />
       <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/DispatchingDeliveryService.asmx"
-        binding="customBinding" bindingConfiguration="DispatchingDeliveryServiceSoap12"
-        contract="DispatchService.DispatchingDeliveryServiceSoap" name="DispatchingDeliveryServiceSoap12" />
+           binding="customBinding" bindingConfiguration="DispatchingDeliveryServiceSoap12"
+           contract="DispatchService.DispatchingDeliveryServiceSoap"
+           name="DispatchingDeliveryServiceSoap12" />
       <endpoint address="http://triton.pemaustria.com/production/WebService/ProdRaw.asmx"
-        binding="basicHttpBinding" bindingConfiguration="ProdRawSoap"
-        contract="ProductRawService.ProdRawSoap" name="ProdRawSoap" />
+           binding="basicHttpBinding" bindingConfiguration="ProdRawSoap"
+           contract="ProductRawService.ProdRawSoap" name="ProdRawSoap" />
       <endpoint address="http://triton.pemaustria.com/production/WebService/ProdRaw.asmx"
-        binding="customBinding" bindingConfiguration="ProdRawSoap12"
-        contract="ProductRawService.ProdRawSoap" name="ProdRawSoap12" />
+           binding="customBinding" bindingConfiguration="ProdRawSoap12"
+           contract="ProductRawService.ProdRawSoap" name="ProdRawSoap12" />
       <endpoint address="http://triton.pemaustria.com/superadmin/WebService/AdminRaw.asmx"
-        binding="basicHttpBinding" bindingConfiguration="AdminRawSoap"
-        contract="AdminRawService.AdminRawSoap" name="AdminRawSoap" />
+           binding="basicHttpBinding" bindingConfiguration="AdminRawSoap"
+           contract="AdminRawService.AdminRawSoap" name="AdminRawSoap" />
       <endpoint address="http://triton.pemaustria.com/superadmin/WebService/AdminRaw.asmx"
-        binding="customBinding" bindingConfiguration="AdminRawSoap12"
-        contract="AdminRawService.AdminRawSoap" name="AdminRawSoap12" />
+           binding="customBinding" bindingConfiguration="AdminRawSoap12"
+           contract="AdminRawService.AdminRawSoap" name="AdminRawSoap12" />
       <endpoint address="http://triton.pemaustria.com/warehouse/WebService/WarehouseRaw.asmx"
-        binding="basicHttpBinding" bindingConfiguration="WarehouseRawSoap"
-        contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap" />
+           binding="basicHttpBinding" bindingConfiguration="WarehouseRawSoap"
+           contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap" />
       <endpoint address="http://triton.pemaustria.com/warehouse/WebService/WarehouseRaw.asmx"
-        binding="customBinding" bindingConfiguration="WarehouseRawSoap12"
-        contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap12" />
+           binding="customBinding" bindingConfiguration="WarehouseRawSoap12"
+           contract="WarehouseRaw.WarehouseRawSoap" name="WarehouseRawSoap12" />
       <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageItemService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="ManageItemServiceSoap"
-        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap" />
+           binding="basicHttpBinding" bindingConfiguration="ManageItemServiceSoap"
+           contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap" />
       <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageItemService.asmx"
-        binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
-        contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />
+           binding="customBinding" bindingConfiguration="ManageItemServiceSoap12"
+           contract="ManageItemService.ManageItemServiceSoap" name="ManageItemServiceSoap12" />
       <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageSupplierService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="ManageSupplierServiceSoap"
-        contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap" />
+           binding="basicHttpBinding" bindingConfiguration="ManageSupplierServiceSoap"
+           contract="ManageSupplierService.ManageSupplierServiceSoap"
+           name="ManageSupplierServiceSoap" />
       <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageSupplierService.asmx"
-        binding="customBinding" bindingConfiguration="ManageSupplierServiceSoap12"
-        contract="ManageSupplierService.ManageSupplierServiceSoap" name="ManageSupplierServiceSoap12" />
+           binding="customBinding" bindingConfiguration="ManageSupplierServiceSoap12"
+           contract="ManageSupplierService.ManageSupplierServiceSoap"
+           name="ManageSupplierServiceSoap12" />
       <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OnHoldService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="OnHoldServiceSoap"
-        contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap" />
+           binding="basicHttpBinding" bindingConfiguration="OnHoldServiceSoap"
+           contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap" />
       <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OnHoldService.asmx"
-        binding="customBinding" bindingConfiguration="OnHoldServiceSoap12"
-        contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap12" />
+           binding="customBinding" bindingConfiguration="OnHoldServiceSoap12"
+           contract="OnHoldService.OnHoldServiceSoap" name="OnHoldServiceSoap12" />
       <endpoint address="http://triton.pemaustria.com/sales/WebService/ProductOrderService.asmx"
-        binding="basicHttpBinding" bindingConfiguration="ProductOrderServiceSoap"
-        contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap" />
+           binding="basicHttpBinding" bindingConfiguration="ProductOrderServiceSoap"
+           contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap" />
       <endpoint address="http://triton.pemaustria.com/sales/WebService/ProductOrderService.asmx"
-        binding="customBinding" bindingConfiguration="ProductOrderServiceSoap12"
-        contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap12" />
+           binding="customBinding" bindingConfiguration="ProductOrderServiceSoap12"
+           contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap12" />
+      <endpoint address="http://localhost:2908/admin/WebService/ManageClientService.asmx"
+           binding="basicHttpBinding" bindingConfiguration="ManageClientServiceSoap"
+           contract="ManageClientService.ManageClientServiceSoap" name="ManageClientServiceSoap" />
+      <endpoint address="http://localhost:2908/admin/WebService/ManageClientService.asmx"
+           binding="customBinding" bindingConfiguration="ManageClientServiceSoap12"
+           contract="ManageClientService.ManageClientServiceSoap" name="ManageClientServiceSoap12" />
     </client>
   </system.serviceModel>
 </configuration>
