Login anf Endpoint

--- a/ecci.inv.system/Web.config
+++ b/ecci.inv.system/Web.config
@@ -196,6 +196,12 @@
       <endpoint address="http://localhost:2908/sales/WebService/ProductOrderService.asmx"
         binding="customBinding" bindingConfiguration="ProductOrderServiceSoap12"
         contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap12" />
+        <endpoint address="http://localhost:2908/admin/WebService/ManageClientService.asmx"
+           binding="basicHttpBinding" bindingConfiguration="ManageClientServiceSoap"
+           contract="ManageClientService.ManageClientServiceSoap" name="ManageClientServiceSoap" />
+      <endpoint address="http://localhost:2908/admin/WebService/ManageClientService.asmx"
+           binding="customBinding" bindingConfiguration="ManageClientServiceSoap12"
+           contract="ManageClientService.ManageClientServiceSoap" name="ManageClientServiceSoap12" />
     </client>-->
     <client>
       <endpoint address="http://triton.pemaustria.com/qualitycontrol/WebService/OrderDeliveryService.asmx"
@@ -256,10 +262,10 @@
       <endpoint address="http://triton.pemaustria.com/sales/WebService/ProductOrderService.asmx"
            binding="customBinding" bindingConfiguration="ProductOrderServiceSoap12"
            contract="ProductOrderService.ProductOrderServiceSoap" name="ProductOrderServiceSoap12" />
-      <endpoint address="http://localhost:2908/admin/WebService/ManageClientService.asmx"
+      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageClientService.asmx"
            binding="basicHttpBinding" bindingConfiguration="ManageClientServiceSoap"
            contract="ManageClientService.ManageClientServiceSoap" name="ManageClientServiceSoap" />
-      <endpoint address="http://localhost:2908/admin/WebService/ManageClientService.asmx"
+      <endpoint address="http://triton.pemaustria.com/admin/WebService/ManageClientService.asmx"
            binding="customBinding" bindingConfiguration="ManageClientServiceSoap12"
            contract="ManageClientService.ManageClientServiceSoap" name="ManageClientServiceSoap12" />
     </client>
