--- a/ecci.inv.system/ecci.inv.system.csproj
+++ b/ecci.inv.system/ecci.inv.system.csproj
@@ -6761,7 +6761,7 @@
     <Content Include="production\process.aspx" />
     <Content Include="production\request.aspx" />
     <Content Include="production\orderedrequest.aspx" />
-    <Content Include="production\WebForm3.aspx" />
+    <Content Include="production\requestmaterials.aspx" />
     <Content Include="production\WebService\ProcessRaw.asmx" />
     <Content Include="production\WebService\ProdRaw.asmx" />
     <Content Include="production\WebService\RequestMaterials.asmx" />
@@ -7675,12 +7675,12 @@
     <Compile Include="production\orderedrequest.aspx.designer.cs">
       <DependentUpon>orderedrequest.aspx</DependentUpon>
     </Compile>
-    <Compile Include="production\WebForm3.aspx.cs">
-      <DependentUpon>WebForm3.aspx</DependentUpon>
+    <Compile Include="production\requestmaterials.aspx.cs">
+      <DependentUpon>requestmaterials.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="production\WebForm3.aspx.designer.cs">
-      <DependentUpon>WebForm3.aspx</DependentUpon>
+    <Compile Include="production\requestmaterials.aspx.designer.cs">
+      <DependentUpon>requestmaterials.aspx</DependentUpon>
     </Compile>
     <Compile Include="production\WebService\ProcessRaw.asmx.cs">
       <DependentUpon>ProcessRaw.asmx</DependentUpon>
